--- a/index.html
+++ b/index.html
@@ -1,18 +1,46 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>PokeDex</title>
-  <link rel="stylesheet" href="./style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet" />
-</head>
+  <link rel="stylesheet" href="/assets/css/style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500;700&display=swap" rel="stylesheet">
+
 <body>
 
-  <div class="container">
-    <h1>Pokedex</h1>
-    <ul data-js="pokedex"  id="ul-pokedex" class="pokedex"></ul>
+  <header>
+    <div class="container" id="logo">
+      <img class="logo-img" src="/assets/img/pokedex-logo.svg" alt="" />
+      <h1>Pokedex</h1>
+    </div>
+  </header>
+  <div data-js="pokedex" class="pokedex container">
+    <!-- <div class="cssload-preloader loading">
+			<span>C</span>
+		<span>a</span>
+		<span>r</span>
+		<span>r</span>
+		<span>e</span>
+		<span>g</span>
+		<span>a</span>
+		<span>n</span>
+		<span>d</span>
+		<span>o</span>
+		<span>.</span>
+		<span>.</span>
+		<span>.</span>
+
+</div> -->
+
+    
+
+
   </div>
-  
-  <script src="./app.js"></script>
+
+  <script src="/assets/js/app.js"></script>
 </body>
+
 </html>
