--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
 <body>
 
   <header>
-    <div class="container" id="logo">
-      <img class="logo-img" src="/assets/img/pokedex-logo.svg" alt="" />
-      <h1>Pokedex</h1>
+    <div class="container">
+      <div id="logo">
+        <img class="logo-img" src="/assets/img/pokedex-logo.svg" alt="" />
+        <h1>Pokedex</h1>
+      </div>
+      <div class="search">
+        
+      </div>
     </div>
   </header>
   <div data-js="pokedex" class="pokedex container">
@@ -35,7 +40,7 @@
 
 </div> -->
 
-    
+
 
 
   </div>
