--- a/index.html
+++ b/index.html
@@ -1,51 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-  <meta charset="UTF-8" />
-  <title>PokeDex</title>
-  <link rel="stylesheet" href="/assets/css/style.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500;700&display=swap" rel="stylesheet">
-
-<body>
-
-  <header>
-    <div class="container">
-      <div id="logo">
-        <img class="logo-img" src="/assets/img/pokedex-logo.svg" alt="" />
-        <h1>Pokedex</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <title>PokeDex</title>
+    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/animations.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <div id="logo">
+          <img class="logo-img" src="/assets/img/pokedex-logo.svg" alt="" />
+          <h1>Pokedex</h1>
+        </div>
+        <div class="search"></div>
       </div>
-      <div class="search">
-        
+    </header>
+    <div data-js="pokedex" class="pokedex container">
+      <div class="cssload-preloader loading">
+        <span>C</span>
+        <span>a</span>
+        <span>r</span>
+        <span>r</span>
+        <span>e</span>
+        <span>g</span>
+        <span>a</span>
+        <span>n</span>
+        <span>d</span>
+        <span>o</span>
+        <span>.</span>
+        <span>.</span>
+        <span>.</span>
       </div>
     </div>
-  </header>
-  <div data-js="pokedex" class="pokedex container">
-    <!-- <div class="cssload-preloader loading">
-			<span>C</span>
-		<span>a</span>
-		<span>r</span>
-		<span>r</span>
-		<span>e</span>
-		<span>g</span>
-		<span>a</span>
-		<span>n</span>
-		<span>d</span>
-		<span>o</span>
-		<span>.</span>
-		<span>.</span>
-		<span>.</span>
-
-</div> -->
-
-
-
-
-  </div>
-
-  <script src="/assets/js/app.js"></script>
-</body>
-
+    <script src="/assets/js/script.js"></script>
+  </body>
 </html>
