--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <title>PokeDex</title>
+    <title>PokeDex - By @thiilins</title>
     <link rel="stylesheet" href="/assets/css/style.css" />
     <link rel="stylesheet" href="/assets/css/animations.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -17,7 +17,7 @@
       <div class="container">
         <div id="logo">
           <img class="logo-img" src="/assets/img/pokedex-logo.svg" alt="" />
-          <h1>Pokedex</h1>
+          <h1>Pokedex </h1>
         </div>
         <div class="search"></div>
       </div>
@@ -41,5 +41,8 @@
     </div>
     <script src="/assets/js/script.js"></script>
     </script>
+  <footer>
+     <p> Desenvolvido por <span><a href="https://github.com/thiilins">@thiilins</a></span> </p>
+  </footer>
   </body>
 </html>
