--- a/index.html
+++ b/index.html
@@ -43,21 +43,36 @@
   </script>
   <!-- THIDEV WIDGET START -->
 
-  <div class="td-item td-github">
+  <div id="td-widget">
+
+    <div class="td-item td-code">
+      <div class="td-icon code-icon">
+        <img class="td-icon-img" src="/assets/img/td-widget/code.svg" alt="">
+      </div>
+      <div class="td-link code-link">
+        <a href="https://github.com/thiilins/pokedex">thiilins/pokedex</a>
+      </div>
+    </div>
+    <div class="td-item td-github">
       <div class="td-icon github-icon">
         <img class="td-icon-img" src="/assets/img/td-widget/github.svg" alt="">
       </div>
-      <div class="td-link github-link"> 
+      <div class="td-link github-link">
         <a href="https://github.com/thiilins">@thiilins</a>
       </div>
-  </div>
-  <div class="td-item td-linkedin">
+    </div>
+    <div class="td-item td-linkedin">
       <div class="td-icon linkedin-icon">
         <img class="td-icon-img" src="/assets/img/td-widget/linkedin.svg" alt="">
       </div>
-      <div class="td-link linkedin-link"> 
+      <div class="td-link linkedin-link">
         <a href="https://www.linkedin.com/in/thiilins">@thiilins</a>
       </div>
+    </div>
+    <div class="td-powered">
+      <img class="td-powered-icon" src="/assets/img/td-widget/powered.svg" alt="">
+      <a href="https://github.com/thiilins/pokedex">Desenvolvido por Thiago Lins</a>
+    </div>
   </div>
 </body>
 
