Atualizado  td-widget

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>PokeDex - By @thiilins</title>
   <link rel="stylesheet" href="/assets/css/style.css" />
   <link rel="stylesheet" href="/assets/css/animations.css" />
-  <link rel="stylesheet" href="/assets/css/contact.css" />
+  <link rel="stylesheet" href="/assets/css/td-widget.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500;700&display=swap" rel="stylesheet" />
@@ -42,9 +42,7 @@
   <script src="/assets/js/script.js"></script>
   </script>
   <!-- THIDEV WIDGET START -->
-
   <div id="td-widget">
-
     <div class="td-item td-code">
       <div class="td-icon code-icon">
         <img class="td-icon-img" src="/assets/img/td-widget/code.svg" alt="">
@@ -74,6 +72,8 @@
       <a href="https://github.com/thiilins/pokedex">Desenvolvido por Thiago Lins</a>
     </div>
   </div>
+   <!-- THIDEV WIDGET START -->
+
 </body>
 
 </html>
