--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
   <link rel="stylesheet" href="/assets/css/animations.css" />
   <link rel="stylesheet" href="/assets/css/td-widget.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /><meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500;700&display=swap" rel="stylesheet" />
+  <style>
+    html{
+      background-color: black;
+    }
+    .card-type-icon {
+      width:1px;
+    }
+  </style>
 </head>
 
 <body>
@@ -22,7 +30,7 @@
       <div class="search"></div>
     </div>
   </header>
-  <div data-js="pokedex" class="pokedex container">
+  <div data-js="pokedex" class="pokedex">
     <div class="cssload-preloader loading">
       <span>C</span>
       <span>a</span>
@@ -69,7 +77,7 @@
     </div>
     <div class="td-powered">
       <img class="td-powered-icon" src="/assets/img/td-widget/powered.svg" alt="">
-      <a href="https://github.com/thiilins/pokedex">Desenvolvido por Thiago Lins</a>
+      <a >Desenvolvido por Thiago Lins</a>
     </div>
   </div>
    <!-- THIDEV WIDGET START -->
