--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <a >Desenvolvido por Thiago Lins</a>
     </div>
   </div>
-   <!-- THIDEV WIDGET START -->
+   <!-- THIDEV WIDGET FINISH -->
 
 </body>
 
