Correções no Widget

--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
   </script>
   <!-- THIDEV WIDGET START -->
   <div id="td-widget">
+      <div class="td-item td-powered">
+    <div class="td-icon powered-icon">
+      <img
+        class="td-icon-img td-powered-icon"
+        src="/assets/img/td-widget/powered.svg"
+        alt=""
+      />
+    </div>
+    <div class="td-link powered-link">
+      <a>Desenvolvido por Thiago Lins :)</a>
+    </div>
+  </div>
     <div class="td-item td-code">
       <div class="td-icon code-icon">
         <img class="td-icon-img" src="/assets/img/td-widget/code.svg" alt="">
@@ -67,10 +79,7 @@
         <a href="https://www.linkedin.com/in/thiilins">@thiilins</a>
       </div>
     </div>
-    <div class="td-powered">
-      <img class="td-powered-icon" src="/assets/img/td-widget/powered.svg" alt="">
-      <a >Desenvolvido por Thiago Lins</a>
-    </div>
+    
   </div>
    <!-- THIDEV WIDGET FINISH -->
 
