--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>PokeDex - By @thiilins</title>
   <link rel="stylesheet" href="/assets/css/style.css" />
   <link rel="stylesheet" href="/assets/css/animations.css" />
-  <link rel="stylesheet" href="https://thiagolins.dev.br/td-widget/css/td-widget.css" />
+  <link rel="stylesheet" href="https://cdn.thiagolins.dev.br/td-widget/css/td-widget.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /><meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500;700&display=swap" rel="stylesheet" />
@@ -47,7 +47,7 @@
     <div class="td-icon powered-icon">
       <img
         class="td-icon-img td-powered-icon"
-        src="https://thiagolins.dev.br/td-widget/img/powered.svg"
+        src="https://cdn.thiagolins.dev.br/td-widget/img/powered.svg"
         alt=""
       />
     </div>
@@ -57,7 +57,7 @@
   </div>
     <div class="td-item td-code">
       <div class="td-icon code-icon">
-        <img class="td-icon-img" src="https://thiagolins.dev.br/td-widget/img/code.svg" alt="">
+        <img class="td-icon-img" src="https://cdn.thiagolins.dev.br/td-widget/img/code.svg" alt="">
       </div>
       <div class="td-link code-link">
         <a href="https://github.com/thiilins/pokedex">thiilins/pokedex</a>
@@ -65,7 +65,7 @@
     </div>
     <div class="td-item td-github">
       <div class="td-icon github-icon">
-        <img class="td-icon-img" src="https://thiagolins.dev.br/td-widget/img/github.svg" alt="">
+        <img class="td-icon-img" src="https://cdn.thiagolins.dev.br/td-widget/img/github.svg" alt="">
       </div>
       <div class="td-link github-link">
         <a href="https://github.com/thiilins">@thiilins</a>
@@ -73,7 +73,7 @@
     </div>
     <div class="td-item td-linkedin">
       <div class="td-icon linkedin-icon">
-        <img class="td-icon-img" src="https://thiagolins.dev.br/td-widget/img/linkedin.svg" alt="">
+        <img class="td-icon-img" src="https://cdn.thiagolins.dev.br/td-widget/img/linkedin.svg" alt="">
       </div>
       <div class="td-link linkedin-link">
         <a href="https://www.linkedin.com/in/thiilins">@thiilins</a>
