[Fix] Background Images

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>PokeDex - By @thiilins</title>
+   <link rel="shortcut icon" href="/assets/img/pokedex-logo.svg" type="image/x-icon">
+
   <link rel="stylesheet" href="/assets/css/style.css" />
   <link rel="stylesheet" href="/assets/css/animations.css" />
   <link rel="stylesheet" href="https://cdn.thiagolins.dev.br/td-widget/css/td-widget.css" />
