--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>PokeDex - By @thiilins</title>
+  <title> PokeDex </title>
    <link rel="shortcut icon" href="/assets/img/pokedex-logo.svg" type="image/x-icon">
 
   <link rel="stylesheet" href="/assets/css/style.css" />
